[package]
name = "prost-live"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
bytes = "1"
serde = { version =  "1", features = ["derive"]}
serde_json = "1"

[build-dependencies]
prost-build = { version = "0.10" }